[project]
name = "stylegan3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "ninja>=1.11.1.4",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyspng>=0.1.3",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]
