[project]
name = "stylegan3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.3",
    "psutil>=7.0.0",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
